fixed the other 2 back to home buttons

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -1,6 +1,6 @@
 <main>
 	<nav class="border-gray-200 px-2 mb-10">
-		<a href="/index.html" class="flex">
+		<a href="https://replayzor.github.io/odin-recipes/" class="flex">
 			<img
 				src="https://www.theodinproject.com/assets/icons/odin-icon-b5b31c073f7417a257003166c98cc23743654715305910c068b93a3bf4d3065d.svg"
 				alt=""
@@ -14,6 +14,7 @@
 		width="400px"
 		height="350px"
 	/>
+	
 	<h2>Description</h2>
 	<hr />
 	<p>
